# IT-Cross-2017-Task1

./: .gitignore  build_cmake.sh  build_gnu.sh  input.txt
Derivator/: CMakeLists.txt  Makefile
Derivator/DerivatorApp/: CMakeLists.txt  DerivatorApp.cpp  Makefile
Derivator/DerivatorLib/: CMakeLists.txt  DerivatorLib.cpp  DerivatorLib.h  Makefile
